# soullogger

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  PsramAllocator.hpp  config_loader.cpp  config_loader.hpp  log_writer.cpp  log_writer.hpp  sdmmc_manager.cpp  sdmmc_manager.hpp  sl_main.cpp  uart_manager.cpp  uart_manager.hpp
